@startuml
title Scenario Quality Checker - Class Diagram

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "pl.put.poznan.sqc.app" {
  class SQCApplication <<SpringBootApplication>> {
    +main(args: String[]): void
  }
}

package "pl.put.poznan.sqc.rest" {
  class SQCController <<RestController>> {
    -sqc: SQC
    +SQCController(sqc: SQC)
    +analyze(scenarioWrapper: ScenarioWrapper): ResponseEntity<AnalysisResponse>
    +analyzeText(scenarioWrapper: ScenarioWrapper): ResponseEntity<String>
  }
}

package "pl.put.poznan.sqc.logic" {
  class SQC <<Service>> {
    -keywords: Set<String>
    +analyze(scenarioWrapper: ScenarioWrapper): AnalysisResponse
    +analyzeToText(scenarioWrapper: ScenarioWrapper): String
    -normalize(scenarioWrapper: ScenarioWrapper, warnings: List<String>): AnalysisResponse
    -countTotalSteps(rootStep: Step, warnings: List<String>): Integer
    -countKeywordSteps(rootStep: Step, warnings: List<String>): Integer
    -findStepsWithoutActors(rootStep: Step, warnings: List<String>): List<String>
    -generateTextualScenario(rootStep: Step, maxDepth: int, warnings: List<String>): List<String>
    -generateLimitedScenario(scenario: Scenario, maxDepth: int, warnings: List<String>): Scenario
  }
}

package "pl.put.poznan.sqc.model" {
  class ScenarioWrapper <<record>> {
    +scenario: Scenario
    +options: ScenarioOptions
  }

  class Scenario <<record>> {
    +title: String
    +externalActors: List<String>
    +systemActors: List<String>
    +rootStep: Step
  }

  class ScenarioOptions <<record>> {
    +includeTotalStepCount: Boolean
    +includeKeywordStepCount: Boolean
    +includeStepsWithoutActors: Boolean
    +includeNumberedScenario: Boolean
    +includeLimitedScenario: Boolean
    +includeInvalidSteps: Boolean
    +maxDepth: Integer
  }

  class Step {
    -text: String
    -subSteps: List<Step>
    -keyword: String
    -actor: String
    -cleanText: String
    -orderNumber: String
    +getText(): String
    +setText(text: String): void
    +getSubSteps(): List<Step>
    +setSubSteps(subSteps: List<Step>): void
    +getKeyword(): String
    +setKeyword(keyword: String): void
    +getActor(): String
    +setActor(actor: String): void
    +getCleanText(): String
    +setCleanText(cleanText: String): void
    +getOrderNumber(): String
    +setOrderNumber(orderNumber: String): void
  }

  class AnalysisResponse {
    -status: ResponseStatus
    -message: String
    -warnings: List<String>
    -totalStepCount: Integer
    -keywordStepCount: Integer
    -stepsWithoutActors: List<String>
    -invalidSteps: List<String>
    -textualScenario: List<String>
    -limitedScenario: Scenario
    -otherMistakes: List<String>
    +builder(): Builder
  }

  class Builder {
    +status(status: ResponseStatus): Builder
    +message(message: String): Builder
    +warnings(warnings: List<String>): Builder
    +totalStepCount(totalStepCount: Integer): Builder
    +keywordStepCount(keywordStepCount: Integer): Builder
    +stepsWithoutActors(stepsWithoutActors: List<String>): Builder
    +invalidSteps(invalidSteps: List<String>): Builder
    +textualScenario(textualScenario: List<String>): Builder
    +limitedScenario(limitedScenario: Scenario): Builder
    +otherMistakes(otherMistakes: List<String>): Builder
    +build(): AnalysisResponse
  }

  enum ResponseStatus {
    SUCCESS
    INPUT_ERROR
    SERVER_ERROR
    +getValue(): String
  }
}

SQCApplication ..> SQCController : component scan
SQCController --> SQC : delegates
SQCController ..> ScenarioWrapper : request body
SQCController ..> AnalysisResponse : response body
SQC --> ScenarioWrapper : reads
SQC ..> AnalysisResponse : builds
SQC ..> ResponseStatus : sets status

ScenarioWrapper *-- Scenario
ScenarioWrapper *-- ScenarioOptions
Scenario *-- Step : rootStep
Step *-- "0..*" Step : subSteps
AnalysisResponse *-- ResponseStatus
AnalysisResponse o-- Scenario : limitedScenario
AnalysisResponse +-- Builder

@enduml
